# sensor_energia

./: CMakeLists.txt  Kconfig  README.rst  SensorEnergia.code-workspace  app.overlay  nrf52833_sensor_energia.code-workspace  prj.conf
PCB/: PCB1 v21.fbrd  PCB1 v28.fbrd  Schematic1 v20.fsch  Schematic1 v24.fsch  Sheet_1_2024-05-18.schdoc
PCB/easyeda/: BOM_PrimeiroProjeto1_2024-05-18.csv  Easyeda.json  Library v12.flbr  PCB_PCB_PrimeiroProjeto1_2024-05-18.json  PCB_PrimeiroProjeto1_2024-05-18.pcbdoc  SCH_PrimeiroProjeto1_2024-05-18.json
fonts/: font10x16.c  font15x24.c  font20x32.c  font5x7.c  font8x8.c
includes/: special.c  special.h  variables.h
src/: display.c  main.c
